[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/misc/GUI.gd" type="Script" id=1]
[ext_resource path="res://Fonte/DTM-Sans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Interface/pasue.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Interface/barrinha.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Interface/botao-hover.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Interface/botao-export.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Interface/bola.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Overlays/Audio/Audio.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 26
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GUI" type="Control" parent="."]
margin_left = 171.0
margin_top = 311.0
margin_right = 211.0
margin_bottom = 351.0
mouse_filter = 1

[node name="Pause" type="Sprite" parent="GUI"]
position = Vector2( -140, -280 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="PauseButton" type="TouchScreenButton" parent="GUI/Pause"]
position = Vector2( 40, 40 )
scale = Vector2( -4.03384, -4.01055 )
shape = SubResource( 3 )

[node name="PauseScreen" type="Node2D" parent="."]
visible = false
position = Vector2( 180, 320 )

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
margin_left = -180.0
margin_top = -320.0
margin_right = 180.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 0.537255 )

[node name="StartButton" type="TextureButton" parent="PauseScreen"]
margin_left = -136.0
margin_top = -18.0
margin_right = 136.0
margin_bottom = 70.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="PauseScreen/StartButton"]
margin_left = 92.0
margin_top = 23.0
margin_right = 185.0
margin_bottom = 63.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "VOLTAR"

[node name="QuitButton" type="TextureButton" parent="PauseScreen"]
margin_left = -136.0
margin_top = 145.0
margin_right = 136.0
margin_bottom = 233.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="RichTextLabel3" type="RichTextLabel" parent="PauseScreen/QuitButton"]
margin_left = 98.0
margin_top = 25.0
margin_right = 177.0
margin_bottom = 65.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = " SAIR"

[node name="RichTextLabel" type="RichTextLabel" parent="PauseScreen"]
margin_left = -159.0
margin_top = -222.5
margin_right = 59.0
margin_bottom = -122.5
rect_pivot_offset = Vector2( 264, 176 )
custom_fonts/normal_font = SubResource( 4 )
text = "Volume
"

[node name="volPercentageLabel" type="RichTextLabel" parent="PauseScreen"]
margin_left = -30.0
margin_top = -222.5
margin_right = 188.0
margin_bottom = -122.5
rect_pivot_offset = Vector2( 264, 176 )
custom_fonts/normal_font = SubResource( 4 )

[node name="Barrinha" type="Sprite" parent="PauseScreen"]
position = Vector2( 11, -110.5 )
scale = Vector2( 3.5, 2.75 )
texture = ExtResource( 4 )

[node name="HSlider" type="HSlider" parent="PauseScreen"]
margin_left = -158.0
margin_top = -165.5
margin_right = 159.0
margin_bottom = -105.5
theme = SubResource( 5 )
custom_icons/grabber_disabled = ExtResource( 7 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 6 )
value = 100.0

[node name="Audio" parent="PauseScreen" instance=ExtResource( 8 )]

[connection signal="pressed" from="GUI/Pause/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="PauseScreen/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="PauseScreen/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="PauseScreen/HSlider" to="." method="_on_HSlider_value_changed"]
